# cookiecutter-pylibrary

./: CHANGELOG.rst  CONTRIBUTING.rst  README.rst  cookiecutter.json  tox.ini
ci/: bootstrap.py  setup.cfg  test.sh
ci/envs/: .cookiecutterrc  cext-optional.cookiecutterrc  cext-publish.cookiecutterrc  cext.cookiecutterrc  cffi-publish.cookiecutterrc  cffi.cookiecutterrc  cython-publish.cookiecutterrc  cython.cookiecutterrc  matrix-cext.cookiecutterrc  matrix-separate-cext.cookiecutterrc  nose-pure-argparse.cookiecutterrc  nose-pure-click.cookiecutterrc  nose-pure-nocli.cookiecutterrc  nose-pure.cookiecutterrc  private.cookiecutterrc  pure-argparse.cookiecutterrc  (+17 more)
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .bumpversion.cfg  .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.repo_name}}/ci/: bootstrap.py
{{cookiecutter.repo_name}}/ci/templates/: .travis.yml  tox.ini
{{cookiecutter.repo_name}}/docs/: conf.py  usage.rst
{{cookiecutter.repo_name}}/docs/reference/: index.rst
{{cookiecutter.repo_name}}/docs/reference/{{cookiecutter.package_namespace}}/: {{cookiecutter.package_name}}.rst
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_namespace}}/{{cookiecutter.package_name}}/: __init__.py  __main__.py  cli.py  {{cookiecutter.c_extension_module}}.c  {{cookiecutter.c_extension_module}}_build.py
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.package_namespace}}_{{cookiecutter.package_name}}.py  test_{{cookiecutter.package_name}}.py
(+1 files in other folders)
