[build-system]
requires = [
    "setuptools>=30.3.0",
    "wheel",
{%- if cookiecutter.test_runner == 'pytest' and cookiecutter.setup_py_uses_test_runner == 'yes' %}
    "pytest-runner",
{%- endif %}
{%- if cookiecutter.c_extension_support == 'cython' %}
    "cython",
{%- elif cookiecutter.c_extension_support == 'cffi' %}
    "cffi>=1.0.0",
{%- endif %}
]
